--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-runtime": "^6.26.0",
     "dotenv": "^8.0.0",
     "dynamoose": "^1.10.0",
+    "global": "^4.4.0",
+    "serverless": "^1.46.1",
     "source-map-support": "^0.4.18",
     "vandium": "^4.10.0"
   }
