--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
   },
   "dependencies": {
     "aws-sdk": "^2.486.0",
+    "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
     "dotenv": "^8.0.0",
     "dynamoose": "^1.10.0",
+    "fetch": "^1.1.0",
     "global": "^4.4.0",
     "serverless": "^1.46.1",
     "source-map-support": "^0.4.18",
+    "uuid": "^3.3.2",
     "vandium": "^4.10.0"
   }
 }
