--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,7 @@ service: cashback-users
 plugins:
   - serverless-webpack
   - serverless-offline
+  - serverless-dotenv-plugin
 
 # serverless-webpack configuration
 # Enable auto-packing of external modules
