--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^1.19.0",
     "aws-sdk": "^2.486.0",
     "axios": "^0.19.0",
     "babel-runtime": "^6.26.0",
@@ -33,7 +34,9 @@
     "dynamoose": "^1.10.0",
     "fetch": "^1.1.0",
     "global": "^4.4.0",
+    "node-fetch": "^2.6.0",
     "serverless": "^1.46.1",
+    "serverless-dotenv-plugin": "^2.1.1",
     "source-map-support": "^0.4.18",
     "uuid": "^3.3.2",
     "vandium": "^4.10.0"
