--- a/package.json
+++ b/package.json
@@ -34,11 +34,16 @@
     "dynamoose": "^1.10.0",
     "fetch": "^1.1.0",
     "global": "^4.4.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-fetch": "^2.6.0",
+    "randomstring": "^1.1.5",
+    "request": "^2.88.0",
     "serverless": "^1.46.1",
     "serverless-dotenv-plugin": "^2.1.1",
     "source-map-support": "^0.4.18",
     "uuid": "^3.3.2",
-    "vandium": "^4.10.0"
+    "vandium": "^4.10.0",
+    "xml2js": "^0.4.19"
   }
 }
